Properly finish the pending goto animation during a dispose.

If the view is closed while an animation is pending the program will crash with
the error *** glibc detected *** perl: double free or corruption (!prev): 0x09a68160 ***
See bug: http://bugzilla.gnome.org/show_bug.cgi?id=585776

This patch seems to fix the problem.